2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.csproj:
	  Added an user-oriented changelog.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* Main.cs:
	* Plugins.cs:
	* Options.cs:
	* Commands/Ls.cs:
	* Core/IBGLog.cs:
	* AssemblyInfo.cs:
	* Core/MHDDLog.cs:
	* Core/Checksum.cs:
	* Commands/Verify.cs:
	* Core/Statistics.cs:
	* Commands/Decode.cs:
	* Commands/Entropy.cs:
	* Commands/Formats.cs:
	* Commands/Analyze.cs:
	* Commands/Compare.cs:
	* Commands/Checksum.cs:
	* Commands/Commands.cs:
	* Commands/PrintHex.cs:
	* DetectImageFormat.cs:
	* Commands/Configure.cs:
	* Commands/Benchmark.cs:
	* Commands/DumpMedia.cs:
	* Commands/MediaScan.cs:
	* Commands/MediaInfo.cs:
	* Commands/Statistics.cs:
	* Commands/DeviceInfo.cs:
	* Commands/DeviceReport.cs:
	* Commands/ExtractFiles.cs:
	* Commands/CreateSidecar.cs:
	  Updated copyright string.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	  Bumped version to 3.3.99.0.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.csproj:
	  Upped version to 3.3.99.0. Do not use version from solution
	  on library projects.

2016-10-17  Natalia Portillo  <claunia@claunia.com>

	* Commands/DumpMedia.cs:
	* Commands/DeviceInfo.cs:
	* Commands/DeviceReport.cs:
	* Commands/CreateSidecar.cs:
	  Added PCMCIA support.

2016-10-14  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Added Seagate EVPD and INQUIRY fields.

2016-10-14  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Added Apple OEM MODE page 30h.

2016-10-14  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Added HP vendor EVPD, MODE pages and INQUIRY fields.

2016-10-14  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Added EVPD pages B1h, B2h, B3h and B4h.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Added EVPD page B0h.

2016-10-13  Natalia Portillo  <claunia@claunia.com>
