@@ -1,3 +1,9 @@
+2017-05-23  Natalia Portillo  <claunia@claunia.com>
+
+	* Commands/DumpMedia.cs:
+	  Add support for duming raw with DVD drives that support READ
+	  LONG (10) (afaik only Matshita).
+
 2017-05-19  Natalia Portillo  <claunia@claunia.com>
 
 	* DiscImageChef.csproj:
